[package]
name = "snail-game"
version = "0.1.0"
description = "Snail Game - Combined radar and token transfer hook program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "snail_game"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["interface-instructions"] }
anchor-spl = { version = "0.32.1", features = ["token_2022"] }

